# Conference-Research

./: .env.example  .gitignore  AGENTS.md  BioGen.py  CHANGELOG.md  CHANGELOG_UPDATE.md  CodeOfConduct.md  Contributing.md  Dockerfile  LATEST_UPDATES.md  Missaion.md  README.md  config.yaml  docker-compose.yml  github_issue_configuration_management.md  github_issue_dependency_management.md  github_issue_testing.md  journal.md  main.py  pyproject.toml  requirements.txt  roadmap.md  setup.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  copilot-setup-steps.yaml
.github/workflows/: test.yml
.streamlit/: secrets.toml
.streamlit/.streamlit/: config.toml
con_research/: __init__.py
con_research/config/: config_manager.py
con_research/data/: interests.json
con_research/data/spreadsheet/: conference_data.xlsx
con_research/src/modules/: imports.py  scrape_professors.py  scrapping_module.py  search_module.py  task_timer.py
config/: base.yaml  development.yaml  production.yaml  testing.yaml
docs/: Architecture.md  DEVELOPMENT.md  INSTALLATION.md  TESTING.md  USAGE_EXAMPLES.md
frontend/: package.json
frontend/pages/: index.js
pages/: 1_About.py  2_RAG.py  3_LeadGen.py  3_Outreach.py  4_Desktop_Research.py  4_desktop_research.py  5_PDF_Extractor.py  6_Deep_Research.py  6_File_Q&A.py  7_Dynamic_MultiPage.py  Advanced_Course_Catalogue.py  Advanced_Course_Catalogue_REMOVED.md  Course Reading List.py  Course_Catalogue.py  Course_Reading List.py  LeadGen.py  RAG.py  TEST.py  Web_Scraper.py  Web_Scrapper.py  web_scrapper.py
reports/: FAQ.md  User_Guide.md  project_report_overview _client_edition.md  project_report_overview _customer_edition.md
scripts/: make.py
tests/: conftest.py  test_advanced_course_catalogue.py  test_course_catalogue.py  test_file_validation.py  test_retry_logic.py  test_scrapping_module.py  test_web_scraping.py
