[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "conference-research"
version = "1.0.0"
description = "Automated conference and campus research workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Conference Research Team", email = "team@conference-research.com"},
]
keywords = ["conference", "research", "automation", "academic", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]

dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.10.0,<2.0.0",
    "selenium>=4.15.0",
    "pandas>=1.5.0,<3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "webdriver-manager>=4.0.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.5.2,<0.6.0",
    "duckduckgo_search>=3.8.0",
    "xlsxwriter>=3.2.0",
    "pdfminer.six>=20221105",
    "PyPDF2>=3.0.0",
    "pymupdf4llm>=0.0.5",
    "langchain>=0.1.0",
    "langchain_openai>=0.1.0",
    "google-generativeai>=0.5.0",
    "streamlit-authenticator>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "hypothesis>=6.82.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]
security = [
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "semgrep>=1.45.0",
]

[project.urls]
Homepage = "https://github.com/natnew/Conference-Research"
Documentation = "https://github.com/natnew/Conference-Research/blob/main/README.md"
Repository = "https://github.com/natnew/Conference-Research.git"
"Bug Tracker" = "https://github.com/natnew/Conference-Research/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["con_research*", "pages*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=con_research",
    "--cov=pages",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests that require API access",
    "webdriver: marks tests that require WebDriver",
]

[tool.coverage.run]
source = ["con_research", "pages"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/virtualenv/*",
    ".tox/*",
    ".pytest_cache/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "S311"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "selenium.*",
    "webdriver_manager.*",
    "duckduckgo_search.*",
    "tiktoken.*",
    "serpapi.*",
]
ignore_missing_imports = true
